@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.549 2005/12/26 06:16:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.550 2005/12/26 06:57:47 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   26 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
   exclude packages already in chroot vdb from binary deplist
+  chroot to use best_version for chroot's vdb
 
   25 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/runtimedeps.py:
